--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,35 @@ li {
   align-items: center;
   justify-content: center;
   height: 86vh;
+  background: url(../img/manuru1.jpg) no-repeat center center;
+  background-size:cover;
+  font-weight: 300;
+  z-index: 10;
+}
+
+.logo-title{
+  z-index:10;
+}
+.logo-desc{
+  z-index:10;
+}
+
+.gradation{
+  /* width: 1265px;
+  height: 400px; */
+  background: linear-gradient(45deg, rgba(108,184,255,08),rgba(255,246,108,.8),rgba(255,163,108,.8));
+  /* background-size:600%,600%; */
+  background-size:cover;
+  animation: AnimationName 50s ease infinite;
+  /* position: absolute; */
+  z-index:30; 
+}
+
+@keyframes AnimationName{
+  0%{background-position: 0% 50%}
+  50%{background-position: 100% 50%}
+  100%{background-position: 0% 50% }
+
 }
 
 #header .logo {
@@ -158,6 +187,11 @@ li {
   text-align: center;
   letter-spacing: .2em;
 }
+
+/* #header .logo-img{
+
+
+} */
 
 /*--------------------------------
  グローバルナビ
